--- a/CSS/index.css
+++ b/CSS/index.css
@@ -27,7 +27,7 @@ body{
 
 .header-grid {
     display:grid;
-    grid-template-columns: 3fr 3fr 3fr;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     justify-items: center;
     background-color: #333;
@@ -39,7 +39,7 @@ header h1{
     text-align: center;
     color: #FE6152;
     font-family: "Fira",'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 7vw;
+    font-size: 6vw;
     margin-left: 1vw;
 }
 
@@ -50,8 +50,6 @@ header h1{
 }
 
 nav{
-
-    height: 10vw;
     width: 30vw;
 }
 
@@ -60,21 +58,25 @@ nav ul {
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: center;
+    justify-content: center ;
     align-items: center;
 }
 
 nav li {
-    margin-left: 3vw;
+    display: flex;
+    padding: 15px;
 }
 
+.dropbtn {
+    color: #ffffff;
+    font-size: 1.5vw;
+    justify-content: space-between;
 
-.dropbtn{
-    color: #FFFF;
-    margin: 1vw 1vw 1vw 1vw;
-    font-size: 2vw;
 }
 
+.copy.dropbtn {
+    color: #ffffff;
+}
 
 section h2{
     text-align: center;
@@ -103,34 +105,88 @@ section h2{
     justify-content: space-evenly;
 }
 
-footer{
+
+
+
+.footer {
     background-color: #28353B;
-    background-size: 0.5vw;
-    color: white;
-    font-size: small;
-}
-
-footer a{
-    text-decoration: none;
-    color: white;
-}
-
-.foot{
-    align-items: center;
-    text-align: center;
-    display: grid;
-    grid-template-columns: 3fr 3fr 3fr;
-    justify-items: center;
+    color: #ffffff;
     font-size: 1vw;
+    text-align: center;
 }
 
-.arriba{
-    background-color: #28353B;
+  .footer-container ul {
     display: flex;
-    flex-direction: column;
-    text-align: center;
+    justify-content: center;
     align-items: center;
+    padding: 0%;
+    margin: 0 auto;
+    list-style-type: none;
+    width: max-content;
+    height: fit-content;
+    
+  }
+  
+.footer-container {
+    display: grid;
+    margin: auto;
     gap: 10px;
+    align-items: center;
+    justify-content: center;
+    background-color: #28353B;
+  }
+  
+  .footer-container ul li {
+    line-height: 2.5;
+  }
+  
+.footer-container ul li p {
+    margin: auto;
+    padding: 15px;
+    color: #ffffff;
+}
+
+.Redes.Sociales {
+  text-align: center;
+  font-size: 30px;
+  color: white;
+  background-color: #28353B;;
+  
+}
+
+.links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.links a {
+    margin: 0 30px;
+}
+
+.links a i {
+    font-size: 3rem;
+}
+
+.fab.fa-facebook-f {
+    color: #1877f2;
+}
+
+.fab.fa-whatsapp {
+    color: #25d366;
+}
+
+.fab.fa-instagram {
+    color: #e4405f;
+}
+
+.fab.fa-twitter {
+    color: #1da1f2;
+}
+
+.fab.fa-linkedin {
+    color: #0077b5;
 }
 
 .copy{
@@ -162,16 +218,12 @@ section{
 
 .title{
 
-    font-size: 3vw;
+    font-size: 2vw;
 }
 
 .title2{
 
-    font-size: 2vw;
-}
-
-.codo{
-    color: #000000;
+    font-size: 1vw;
 }
 
 .name{
@@ -182,36 +234,27 @@ justify-content: end;
 }
 .container {
     position: relative;
-    columns: 1fr;
-    grid-row: 1fr;
     width: 100%;
     height: 50%;
     overflow: hidden;
     padding-top: 52.25%;
     background-size: 1vw;
-    
   }
   
   .responsive-iframe {
-    position: absolute;
-    top: 20px;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    height: 400px;
     width: 100%;
-    height: 100%;
-    
   }
 
 
 
   a:link {
-    color: #FFFF ;
+    color: #ffffff ;
     }
      
 
 #pagForm {
-    max-width: 800px;
+    max-width: 550px;
     margin: 0 auto;
     background-color: #fff;
     padding: 20px;
@@ -229,6 +272,7 @@ form h3 {
 }
 
 .Formulario {
+    position: relative;
     margin: 20px 0;
 }
 
@@ -370,7 +414,7 @@ form {
         
     }  
 
-    .foot{
+    .footer{
         background-size: 0.5vw;
         font-size: 2vw;
     }
@@ -439,7 +483,7 @@ form {
         text-align: center;
         font-size: 2vw;
     }
-    .foot{
+    .footer{
         background-size: 0.5vw;
         font-size: 2vw;
     }
@@ -533,7 +577,7 @@ form {
         width: 100%;
     }
 
-    .foot{
+    .footer{
         background-size: 0.5vw;
         font-size: small;
     }
@@ -546,7 +590,16 @@ form {
     section h2{
         font-size: 7vw;
     }
- 
+
+   
+    .dropdown{
+        display:flex;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        flex-wrap:wrap;
+    }
+
     .logo-normal{
 
         height: 3vw;
@@ -605,7 +658,7 @@ form {
         width: 7px;
     }
 
-    .foot {
+    .footer {
         grid-template-columns: 1fr 1fr;
         justify-content: space-around;
     }
@@ -656,13 +709,12 @@ table {
 /* 
 */
 .info-icon {
-    position: fixed;
+    position: absolute;
     top: 5px;
     left: 5px;
 }
 
 .info-icon-image {
-    align-items: center;
     width: 30px;
     cursor: pointer;
 }
